# BionicLobster-ROV

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.en.md  README.md  README.zh-CN.md  codex.md
Boston Big Guy V1/BSP/: IIC.c  IIC.h  timer.c
Boston Big Guy V1/CORE/: startup_stm32f103xb_gcc.c
Boston Big Guy V1/HARDWARE/: JY901S.c  JY901S.h  MS5837.c  MS5837.h  Servo.h
Boston Big Guy V1/SYSTEM/usart/: syscalls_gcc.c
Boston Big Guy V1/USER/: Action.c  Boston Big Guy.uvguix.Administrator  Boston Big Guy.uvoptx  Boston Big Guy.uvprojx  JLinkLog.txt  TIMER.map  main.c  main.h
Boston Big Guy/BSP/: GPIO.h
Boston Big Guy/HARDWARE/: A4988.c  AS5600.c  Motor.h  Servo.c
Boston Big Guy/SYSTEM/usart/: usart.c
Boston Big Guy/USER/: Action.h  ReadMe.txt  startup_stm32f10x_hd.lst
cmake/: arm-none-eabi-gcc.cmake
common/: control_link.h  telemetry_link.h
firmware/BSP/: GPIO.c  IIC.c  IIC.h  stmflash.c  stmflash.h  timer.c
firmware/HARDWARE/: A4988.c  A4988.h  AS5600.c  AS5600.h  JY901S.c  MS5837.c  MS5837.h  Motor.c  Servo.c  Servo.h
firmware/SYSTEM/delay/: delay.c
firmware/SYSTEM/sys/: sys.c
firmware/SYSTEM/usart/: usart.c  usart.h
firmware/USER/: Action.c  Action.h  main.c  main.h
firmware_quad/BSP/: GPIO.c  GPIO.h  timer.c
firmware_quad/HARDWARE/: JY901S.c  JY901S.h  MS5837.c  Motor.c  Servo.c  Servo.h  led.c
firmware_quad/SYSTEM/usart/: usart.c  usart.h
firmware_quad/USER/: Action.c  Action.h  FlightControl.c  FlightControl.h  RunState.c  RunState.h  Scheduler.c  Scheduler.h  main.c  main.h  stm32f10x_it.c  stm32f10x_it.h
ld/: stm32f103c8.ld
openocd/: daplink-stm32f103c8.cfg
scripts/: build.sh  env.sh  flash.sh  gcc-wrapper.sh  gdb-wrapper.sh  openocd-gdb-server.sh  openocd-wrapper.sh  setup-local-toolchain.sh
